--- a/BattleTank/Config/DefaultInput.ini
+++ b/BattleTank/Config/DefaultInput.ini
@@ -72,13 +72,17 @@ DefaultViewportMouseLockMode=LockOnCapture
 -AxisMappings=(AxisName="AimElevation",Key=MouseY,Scale=1.000000)
 -AxisMappings=(AxisName="AimElevation",Key=Gamepad_RightY,Scale=1.000000)
 -AxisMappings=(AxisName="LeftTrackThrottle",Key=Gamepad_LeftTriggerAxis,Scale=1.000000)
--AxisMappings=(AxisName="RightTrackThrottle",Key=Gamepad_RightTrigger,Scale=1.000000)
+-AxisMappings=(AxisName="RightTrackThrottle",Key=Gamepad_RightTriggerAxis,Scale=1.000000)
+-AxisMappings=(AxisName="LeftTrackThrottle",Key=Left,Scale=1.000000)
+-AxisMappings=(AxisName="RightTrackThrottle",Key=None,Scale=1.000000)
 +AxisMappings=(AxisName="AimAzimuth",Key=MouseX,Scale=1.000000)
 +AxisMappings=(AxisName="AimAzimuth",Key=Gamepad_RightX,Scale=1.000000)
 +AxisMappings=(AxisName="AimElevation",Key=MouseY,Scale=1.000000)
 +AxisMappings=(AxisName="AimElevation",Key=Gamepad_RightY,Scale=1.000000)
 +AxisMappings=(AxisName="LeftTrackThrottle",Key=Gamepad_LeftTriggerAxis,Scale=1.000000)
 +AxisMappings=(AxisName="RightTrackThrottle",Key=Gamepad_RightTriggerAxis,Scale=1.000000)
++AxisMappings=(AxisName="LeftTrackThrottle",Key=Left,Scale=1.000000)
++AxisMappings=(AxisName="RightTrackThrottle",Key=Right,Scale=1.000000)
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
