--- a/BattleTank/Config/DefaultInput.ini
+++ b/BattleTank/Config/DefaultInput.ini
@@ -74,6 +74,8 @@ DefaultViewportMouseLockMode=LockOnCapture
 -AxisMappings=(AxisName="LeftTrackThrottle",Key=Gamepad_LeftTriggerAxis,Scale=1.000000)
 -AxisMappings=(AxisName="RightTrackThrottle",Key=Gamepad_RightTriggerAxis,Scale=1.000000)
 -AxisMappings=(AxisName="LeftTrackThrottle",Key=Left,Scale=1.000000)
+-AxisMappings=(AxisName="RightTrackThrottle",Key=Right,Scale=1.000000)
+-AxisMappings=(AxisName="LeftTrackThrottle",Key=Gamepad_LeftShoulder,Scale=1.000000)
 -AxisMappings=(AxisName="RightTrackThrottle",Key=None,Scale=1.000000)
 +AxisMappings=(AxisName="AimAzimuth",Key=MouseX,Scale=1.000000)
 +AxisMappings=(AxisName="AimAzimuth",Key=Gamepad_RightX,Scale=1.000000)
@@ -83,6 +85,8 @@ DefaultViewportMouseLockMode=LockOnCapture
 +AxisMappings=(AxisName="RightTrackThrottle",Key=Gamepad_RightTriggerAxis,Scale=1.000000)
 +AxisMappings=(AxisName="LeftTrackThrottle",Key=Left,Scale=1.000000)
 +AxisMappings=(AxisName="RightTrackThrottle",Key=Right,Scale=1.000000)
++AxisMappings=(AxisName="LeftTrackThrottle",Key=Gamepad_LeftShoulder,Scale=1.000000)
++AxisMappings=(AxisName="RightTrackThrottle",Key=Gamepad_RightShoulder,Scale=1.000000)
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
