--- a/BattleTank/Config/DefaultInput.ini
+++ b/BattleTank/Config/DefaultInput.ini
@@ -1,5 +1,11 @@
 
 [/Script/Engine.InputSettings]
+-AxisConfig=(AxisKeyName="Gamepad_LeftX",AxisProperties=(DeadZone=0.25,Exponent=1.f,Sensitivity=1.f))
+-AxisConfig=(AxisKeyName="Gamepad_LeftY",AxisProperties=(DeadZone=0.25,Exponent=1.f,Sensitivity=1.f))
+-AxisConfig=(AxisKeyName="Gamepad_RightX",AxisProperties=(DeadZone=0.25,Exponent=1.f,Sensitivity=1.f))
+-AxisConfig=(AxisKeyName="Gamepad_RightY",AxisProperties=(DeadZone=0.25,Exponent=1.f,Sensitivity=1.f))
+-AxisConfig=(AxisKeyName="MouseX",AxisProperties=(DeadZone=0.f,Exponent=1.f,Sensitivity=0.07f))
+-AxisConfig=(AxisKeyName="MouseY",AxisProperties=(DeadZone=0.f,Exponent=1.f,Sensitivity=0.07f))
 -AxisConfig=(AxisKeyName="MotionController_Right_Grip2Axis",AxisProperties=(DeadZone=0.000000,Sensitivity=1.000000,Exponent=1.000000,bInvert=False))
 -AxisConfig=(AxisKeyName="Gamepad_Special_Left_X",AxisProperties=(DeadZone=0.000000,Sensitivity=1.000000,Exponent=1.000000,bInvert=False))
 -AxisConfig=(AxisKeyName="Gamepad_Special_Left_Y",AxisProperties=(DeadZone=0.000000,Sensitivity=1.000000,Exponent=1.000000,bInvert=False))
@@ -72,7 +78,8 @@ DefaultViewportMouseLockMode=LockOnCapture
 -AxisMappings=(AxisName="LeftTrackThrottle",Key=Gamepad_LeftShoulder,Scale=1.000000)
 -AxisMappings=(AxisName="RightTrackThrottle",Key=Gamepad_RightShoulder,Scale=1.000000)
 -AxisMappings=(AxisName="Forward",Key=Gamepad_LeftY,Scale=1.000000)
--AxisMappings=(AxisName="Forward",Key=None,Scale=1.000000)
+-AxisMappings=(AxisName="Forward",Key=W,Scale=1.000000)
+-AxisMappings=(AxisName="TurnRight",Key=None,Scale=1.000000)
 +AxisMappings=(AxisName="AimAzimuth",Key=MouseX,Scale=1.000000)
 +AxisMappings=(AxisName="AimAzimuth",Key=Gamepad_RightX,Scale=1.000000)
 +AxisMappings=(AxisName="AimElevation",Key=MouseY,Scale=1.000000)
@@ -85,6 +92,7 @@ DefaultViewportMouseLockMode=LockOnCapture
 +AxisMappings=(AxisName="RightTrackThrottle",Key=Gamepad_RightShoulder,Scale=1.000000)
 +AxisMappings=(AxisName="Forward",Key=Gamepad_LeftY,Scale=1.000000)
 +AxisMappings=(AxisName="Forward",Key=W,Scale=1.000000)
++AxisMappings=(AxisName="TurnRight",Key=D,Scale=1.000000)
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
