lecture 184: Add sideways friction to tank

--- a/BattleTank/Config/DefaultInput.ini
+++ b/BattleTank/Config/DefaultInput.ini
@@ -79,7 +79,10 @@ DefaultViewportMouseLockMode=LockOnCapture
 -AxisMappings=(AxisName="RightTrackThrottle",Key=Gamepad_RightShoulder,Scale=1.000000)
 -AxisMappings=(AxisName="Forward",Key=Gamepad_LeftY,Scale=1.000000)
 -AxisMappings=(AxisName="Forward",Key=W,Scale=1.000000)
--AxisMappings=(AxisName="TurnRight",Key=None,Scale=1.000000)
+-AxisMappings=(AxisName="TurnRight",Key=D,Scale=1.000000)
+-AxisMappings=(AxisName="TurnRight",Key=Gamepad_LeftX,Scale=1.000000)
+-AxisMappings=(AxisName="Backward",Key=S,Scale=1.000000)
+-AxisMappings=(AxisName="TurnLeft",Key=None,Scale=1.000000)
 +AxisMappings=(AxisName="AimAzimuth",Key=MouseX,Scale=1.000000)
 +AxisMappings=(AxisName="AimAzimuth",Key=Gamepad_RightX,Scale=1.000000)
 +AxisMappings=(AxisName="AimElevation",Key=MouseY,Scale=1.000000)
@@ -93,6 +96,9 @@ DefaultViewportMouseLockMode=LockOnCapture
 +AxisMappings=(AxisName="Forward",Key=Gamepad_LeftY,Scale=1.000000)
 +AxisMappings=(AxisName="Forward",Key=W,Scale=1.000000)
 +AxisMappings=(AxisName="TurnRight",Key=D,Scale=1.000000)
++AxisMappings=(AxisName="TurnRight",Key=Gamepad_LeftX,Scale=1.000000)
++AxisMappings=(AxisName="Backward",Key=S,Scale=1.000000)
++AxisMappings=(AxisName="TurnLeft",Key=A,Scale=1.000000)
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
