--- a/BattleTank/Config/DefaultInput.ini
+++ b/BattleTank/Config/DefaultInput.ini
@@ -63,10 +63,12 @@ DefaultViewportMouseLockMode=LockOnCapture
 -ActionMappings=(ActionName="Quit",Key=Escape,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 -ActionMappings=(ActionName="Fire",Key=LeftMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 -ActionMappings=(ActionName="Fire",Key=Gamepad_FaceButton_Bottom,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
+-ActionMappings=(ActionName="Camera",Key=MiddleMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Quit",Key=Gamepad_Special_Left,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Quit",Key=Escape,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Fire",Key=LeftMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Fire",Key=Gamepad_FaceButton_Bottom,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="SwapCamera",Key=MiddleMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 -AxisMappings=(AxisName="AimAzimuth",Key=MouseX,Scale=1.000000)
 -AxisMappings=(AxisName="AimAzimuth",Key=Gamepad_RightX,Scale=1.000000)
 -AxisMappings=(AxisName="AimElevation",Key=MouseY,Scale=1.000000)
@@ -82,7 +84,7 @@ DefaultViewportMouseLockMode=LockOnCapture
 -AxisMappings=(AxisName="TurnRight",Key=D,Scale=1.000000)
 -AxisMappings=(AxisName="TurnRight",Key=Gamepad_LeftX,Scale=1.000000)
 -AxisMappings=(AxisName="Backward",Key=S,Scale=-1.000000)
--AxisMappings=(AxisName="TurnLeft",Key=A,Scale=1.000000)
+-AxisMappings=(AxisName="TurnLeft",Key=A,Scale=-1.000000)
 +AxisMappings=(AxisName="AimAzimuth",Key=MouseX,Scale=1.000000)
 +AxisMappings=(AxisName="AimAzimuth",Key=Gamepad_RightX,Scale=1.000000)
 +AxisMappings=(AxisName="AimElevation",Key=MouseY,Scale=1.000000)
